Merge branch main into 1.18.2