@@ -1,19 +1,16 @@
 package com.xtracr.realcamera.config;
 
+import com.xtracr.realcamera.utils.Triple;
+import net.minecraft.client.MinecraftClient;
+import net.minecraft.util.math.MathHelper;
+import net.minecraft.util.registry.Registry;
+
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
-import com.xtracr.realcamera.utils.Triple;
-
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.network.ClientPlayerEntity;
-import net.minecraft.util.math.MathHelper;
-import net.minecraft.util.registry.Registry;
-
 public class ModConfig {
-
     protected static final double MIN_DOUBLE = -64.0D;
     protected static final double MAX_DOUBLE = 64.0D;
 
@@ -23,8 +20,277 @@ public class ModConfig {
     public Compats compats = new Compats();
     public Disable disable = new Disable();
 
-    public class General {
+    public static <L, M, R> void resetTripleIfNull(Triple<L, M, R> triple, Triple<L, M, R> source) {
+        if (triple == null) triple = source;
+        if (triple.getLeft() == null) triple.setLeft(source.getLeft());
+        if (triple.getMiddle() == null) triple.setMiddle(source.getMiddle());
+        if (triple.getRight() == null) triple.setRight(source.getRight());
+    }
 
+    public void set(ModConfig modConfig) {
+        general = modConfig.general;
+        binding = modConfig.binding;
+        classic = modConfig.classic;
+        compats = modConfig.compats;
+        disable = modConfig.disable;
+    }
+
+    public void clamp() {
+        general.clamp();
+        binding.clamp();
+        classic.clamp();
+        disable.clamp();
+    }
+
+    public boolean isEnabled() {
+        return general.enabled;
+    }
+
+    public void setEnabled(boolean value) {
+        general.enabled = value;
+    }
+
+    public boolean isClassic() {
+        return general.classic;
+    }
+
+    public void setClassic(boolean value) {
+        general.classic = value;
+    }
+
+    public boolean doClipToSpace() {
+        return general.clipToSpace;
+    }
+
+    public boolean isCrosshairDynamic() {
+        return general.dynamicCrosshair;
+    }
+
+    public boolean isRendering() {
+        return general.renderModel;
+    }
+
+    public double getAdjustStep() {
+        return general.adjustStep;
+    }
+
+    public double getScale() {
+        return general.scale * 0.0625D;
+    }
+
+    // binding
+    public VanillaModelPart getVanillaModelPart() {
+        return binding.vanillaModelPart;
+    }
+
+    public boolean isAdjustingOffset() {
+        return binding.adjustOffset;
+    }
+
+    public double getBindingX() {
+        return binding.cameraX;
+    }
+
+    public double getBindingY() {
+        return binding.cameraY;
+    }
+
+    public double getBindingZ() {
+        return binding.cameraZ;
+    }
+
+    public boolean isPitchingBound() {
+        return binding.bindPitching;
+    }
+
+    public boolean isYawingBound() {
+        return binding.bindYawing;
+    }
+
+    public boolean isRollingBound() {
+        return binding.bindRolling;
+    }
+
+    public float getBindingPitch() {
+        return binding.pitch;
+    }
+
+    public float getBindingYaw() {
+        return binding.yaw;
+    }
+
+    public float getBindingRoll() {
+        return binding.roll;
+    }
+
+    public void setAdjustOffset(boolean value) {
+        binding.adjustOffset = value;
+    }
+
+    public void adjustBindingX(boolean add) {
+        int s = add ? 1 : -1;
+        if (isAdjustingOffset()) binding.cameraX += s * getAdjustStep();
+        else binding.roll += s * 4 * (float) getAdjustStep();
+        binding.clamp();
+    }
+
+    public void adjustBindingY(boolean add) {
+        int s = add ? 1 : -1;
+        if (isAdjustingOffset()) binding.cameraY += s * getAdjustStep();
+        else binding.yaw += s * 4 * (float) getAdjustStep();
+        binding.clamp();
+    }
+
+    public void adjustBindingZ(boolean add) {
+        int s = add ? 1 : -1;
+        if (isAdjustingOffset()) binding.cameraZ += s * getAdjustStep();
+        else binding.pitch += s * 4 * (float) getAdjustStep();
+        binding.clamp();
+    }
+
+    // classic
+    public Classic.AdjustMode getClassicAdjustMode() {
+        return classic.adjustMode;
+    }
+
+    public double getClassicX() {
+        return classic.cameraX;
+    }
+
+    public double getClassicY() {
+        return classic.cameraY;
+    }
+
+    public double getClassicZ() {
+        return classic.cameraZ;
+    }
+
+    public double getCenterX() {
+        return classic.centerX;
+    }
+
+    public double getCenterY() {
+        return classic.centerY;
+    }
+
+    public double getCenterZ() {
+        return classic.centerZ;
+    }
+
+    public float getClassicPitch() {
+        return classic.pitch;
+    }
+
+    public float getClassicYaw() {
+        return classic.yaw;
+    }
+
+    public float getClassicRoll() {
+        return classic.roll;
+    }
+
+    public void cycleClassicAdjustMode() {
+        classic.adjustMode = classic.adjustMode.cycle();
+    }
+
+    public void adjustClassicX(boolean add) {
+        int s = add ? 1 : -1;
+        switch (classic.adjustMode) {
+            case CENTER -> classic.centerX += s * getAdjustStep();
+            case ROTATION -> classic.roll += s * 4 * (float) getAdjustStep();
+            default -> classic.cameraX += s * getAdjustStep();
+        }
+        classic.clamp();
+    }
+
+    public void adjustClassicY(boolean add) {
+        int s = add ? 1 : -1;
+        switch (classic.adjustMode) {
+            case CENTER -> classic.centerY += s * getAdjustStep();
+            case ROTATION -> classic.yaw += s * 4 * (float) getAdjustStep();
+            default -> classic.cameraY += s * getAdjustStep();
+        }
+        classic.clamp();
+    }
+
+    public void adjustClassicZ(boolean add) {
+        int s = add ? 1 : -1;
+        switch (classic.adjustMode) {
+            case CENTER -> classic.centerZ += s * getAdjustStep();
+            case ROTATION -> classic.pitch += s * 4 * (float) getAdjustStep();
+            default -> classic.cameraZ += s * getAdjustStep();
+        }
+        classic.clamp();
+    }
+
+    // compats
+    public boolean isUsingModModel() {
+        return compats.useModModel;
+    }
+
+    public String getModelModID() {
+        return compats.modelModID;
+    }
+
+    public String getModModelPartName() {
+        return compats.modModelPart;
+    }
+
+    public boolean compatDoABarrelRoll() {
+        return compats.doABarrelRoll;
+    }
+
+    public boolean compatPehkui() {
+        return compats.pehkui;
+    }
+
+    public boolean compatPhysicsMod() {
+        return compats.physicsMod;
+    }
+
+    // disable
+    private boolean shouldDisable(MinecraftClient client, String action) {
+        boolean b = false;
+        for (Triple<String, List<String>, List<String>> triple : disable.customConditions) {
+            if (!triple.getRight().contains(action)) continue;
+            String behavior = triple.getLeft();
+            b = b || (client.player.isHolding(stack ->
+                            triple.getMiddle().contains(Registry.ITEM.getId(stack.getItem()).toString())) &&
+                    (behavior.equals("holding") ||
+                            (behavior.equals("attacking") && client.options.attackKey.isPressed()) ||
+                            (behavior.equals("using") && client.options.useKey.isPressed())));
+        }
+        return b;
+    }
+
+    public boolean shouldDisableRender(String modelPartName) {
+        if (disable.onlyInBinding && general.classic) return false;
+        return (disable.renderModelPart && disable.disabledModelParts.contains(modelPartName)) ||
+                shouldDisable(MinecraftClient.getInstance(), modelPartName);
+    }
+
+    public boolean allowRenderingHandWhen(MinecraftClient client) {
+        if (disable.onlyInBinding && general.classic) return false;
+        return shouldDisable(client, "allow_rendering_hand");
+    }
+
+    public boolean disableModWhen(MinecraftClient client) {
+        if (disable.onlyInBinding && general.classic) return false;
+        return shouldDisable(client, "disable_mod") ||
+                (client.player.isFallFlying() && disable.fallFlying) ||
+                (client.player.isSwimming() && disable.swimming) ||
+                (client.player.shouldLeaveSwimmingPose() && disable.crawling) ||
+                (client.player.isSneaking() && disable.sneaking) ||
+                (client.player.isSleeping() && disable.sleeping) ||
+                (client.currentScreen != null && disable.screenOpened);
+    }
+
+    public boolean disableRenderingWhen(MinecraftClient client) {
+        if (disable.onlyInBinding && general.classic) return false;
+        return shouldDisable(client, "disable_rendering");
+    }
+
+    public static class General {
         public boolean enabled = false;
         public boolean classic = false;
         public boolean clipToSpace = true;
@@ -39,16 +305,12 @@ public class ModConfig {
         }
     }
 
-    public class Binding {
-
+    public static class Binding {
         public VanillaModelPart vanillaModelPart = VanillaModelPart.head;
         public boolean adjustOffset = true;
         public double cameraX = 3.25D;
         public double cameraY = 2.0D;
         public double cameraZ = 0.0D;
-        public double referX = 3.25D;
-        public double referY = 2.0D;
-        public double referZ = 0.0D;
         public boolean bindPitching = true;
         public boolean bindYawing = true;
         public boolean bindRolling = true;
@@ -57,28 +319,21 @@ public class ModConfig {
         public float roll = 0.0F;
 
         private void clamp() {
-            if (!(vanillaModelPart instanceof VanillaModelPart)) vanillaModelPart = VanillaModelPart.head;
+            if (vanillaModelPart == null) vanillaModelPart = VanillaModelPart.head;
             cameraX = MathHelper.clamp(cameraX, MIN_DOUBLE, MAX_DOUBLE);
             cameraY = MathHelper.clamp(cameraY, MIN_DOUBLE, MAX_DOUBLE);
             cameraZ = MathHelper.clamp(cameraZ, MIN_DOUBLE, MAX_DOUBLE);
-            referX = MathHelper.clamp(referX, MIN_DOUBLE, MAX_DOUBLE);
-            referY = MathHelper.clamp(referY, MIN_DOUBLE, MAX_DOUBLE);
-            referZ = MathHelper.clamp(referZ, MIN_DOUBLE, MAX_DOUBLE);
             pitch = MathHelper.wrapDegrees(pitch);
             yaw = MathHelper.wrapDegrees(yaw);
             roll = MathHelper.wrapDegrees(roll);
         }
     }
 
-    public class Classic {
-
+    public static class Classic {
         public AdjustMode adjustMode = AdjustMode.CAMERA;
         public double cameraX = -60.0D;
         public double cameraY = 2.0D;
         public double cameraZ = -16.0D;
-        public double referX = 3.25D;
-        public double referY = 2.0D;
-        public double referZ = 0.0D;
         public double centerX = 0.0D;
         public double centerY = -3.4D;
         public double centerZ = 0.0D;
@@ -87,13 +342,10 @@ public class ModConfig {
         public float roll = 0.0F;
 
         private void clamp() {
-            if (!(adjustMode instanceof AdjustMode)) adjustMode = AdjustMode.CAMERA;
+            if (adjustMode == null) adjustMode = AdjustMode.CAMERA;
             cameraX = MathHelper.clamp(cameraX, MIN_DOUBLE, MAX_DOUBLE);
             cameraY = MathHelper.clamp(cameraY, MIN_DOUBLE, MAX_DOUBLE);
             cameraZ = MathHelper.clamp(cameraZ, MIN_DOUBLE, MAX_DOUBLE);
-            referX = MathHelper.clamp(referX, MIN_DOUBLE, MAX_DOUBLE);
-            referY = MathHelper.clamp(referY, MIN_DOUBLE, MAX_DOUBLE);
-            referZ = MathHelper.clamp(referZ, MIN_DOUBLE, MAX_DOUBLE);
             centerX = MathHelper.clamp(centerX, MIN_DOUBLE, MAX_DOUBLE);
             centerY = MathHelper.clamp(centerY, MIN_DOUBLE, MAX_DOUBLE);
             centerZ = MathHelper.clamp(centerZ, MIN_DOUBLE, MAX_DOUBLE);
@@ -108,13 +360,12 @@ public class ModConfig {
             private static final AdjustMode[] VALUES = values();
 
             public AdjustMode cycle() {
-                return VALUES[(this.ordinal() + 1) % VALUES.length];
+                return VALUES[(ordinal() + 1) % VALUES.length];
             }
         }
     }
 
-    public class Compats {
-
+    public static class Compats {
         public boolean useModModel = false;
         public String modelModID = "minecraft";
         public String modModelPart = "head";
@@ -123,295 +374,32 @@ public class ModConfig {
         public boolean physicsMod = true;
     }
 
-    public class Disable {
-
+    public static class Disable {
+        public static final Set<String> optionalParts = new HashSet<>(Set.of("head", "hat", "helmet"));
         protected static final List<String> defaultParts = Arrays.asList("head", "hat", "helmet");
         protected static final Triple<String, List<String>, List<String>> defaultTriple = new Triple<>
-            ("holding", Arrays.asList("new item id"), Arrays.asList("new action"));
+                ("holding", List.of("new item id"), List.of("new action"));
         protected static final List<Triple<String, List<String>, List<String>>> defaultConditions = Arrays.asList(
-            new Triple<>("using", Arrays.asList("minecraft:spyglass"), Arrays.asList("disable_rendering")), 
-            new Triple<>("holding", Arrays.asList("Example--minecraft:filled_map"), Arrays.asList(
-                "allow_rendering_hand", "leftArm", "rightArm", "leftSleeve", "rightSleeve", "heldItem")));
+                new Triple<>("using", List.of("minecraft:spyglass"), List.of("disable_rendering")),
+                new Triple<>("holding", List.of("Example--minecraft:filled_map"), Arrays.asList(
+                        "allow_rendering_hand", "leftArm", "rightArm", "leftSleeve", "rightSleeve", "heldItem")));
         protected static final String[] behaviors = {"holding", "attacking", "using"};
-
-        public static final Set<String> optionalParts = new HashSet<>(Set.of("head", "hat", "helmet"));
 
         public boolean onlyInBinding = true;
         public boolean renderModelPart = false;
         public List<String> disabledModelParts = defaultParts;
         public List<Triple<String, List<String>, List<String>>> customConditions = defaultConditions;
         public boolean fallFlying = true;
-        public boolean swiming = false;
+        public boolean swimming = false;
         public boolean crawling = false;
         public boolean sneaking = false;
         public boolean sleeping = false;
+        public boolean screenOpened = false;
 
         private void clamp() {
-            if (this.disabledModelParts == null) this.disabledModelParts = defaultParts;
-            if (this.customConditions == null) this.customConditions = defaultConditions;
+            if (disabledModelParts == null) disabledModelParts = defaultParts;
+            if (customConditions == null) customConditions = defaultConditions;
             customConditions.forEach(triple -> resetTripleIfNull(triple, defaultTriple));
         }
-    }
-
-    public static <L, M, R> void resetTripleIfNull(Triple<L, M, R> triple, Triple<L, M, R> source) {
-        if (triple == null) triple = source;
-        if (triple.getLeft() == null) triple.setLeft(source.getLeft());
-        if (triple.getMiddle() == null) triple.setMiddle(source.getMiddle());
-        if (triple.getRight() == null) triple.setRight(source.getRight());
-    }
-
-    public void set(ModConfig modConfig) {
-        this.general = modConfig.general;
-        this.binding = modConfig.binding;
-        this.classic = modConfig.classic;
-        this.compats = modConfig.compats;
-        this.disable = modConfig.disable;
-    }
-
-    public void clamp() {
-        this.general.clamp();
-        this.binding.clamp();
-        this.classic.clamp();
-        this.disable.clamp();
-    }
-
-    public boolean isEnabled() {
-        return this.general.enabled;
-    }
-    public boolean isClassic() {
-        return this.general.classic;
-    }
-    public boolean doClipToSpace() {
-        return this.general.clipToSpace;
-    }
-    public boolean isCrosshairDynamic() {
-        return this.general.dynamicCrosshair;
-    }
-    public boolean isRendering() {
-        return this.general.renderModel;
-    }
-    public double getAdjustStep() {
-        return this.general.adjustStep;
-    }
-    public double getScale() {
-        return this.general.scale * 0.0625D;
-    }
-
-    public void setEnabled(boolean value) {
-        this.general.enabled = value;
-    }
-    public void setClassic(boolean value) {
-        this.general.classic = value;
-    }
-
-    // binding
-    public VanillaModelPart getVanillaModelPart() {
-        return this.binding.vanillaModelPart;
-    }
-    public boolean isAdjustingOffset() {
-        return this.binding.adjustOffset;
-    }
-    public double getBindingX() {
-        return this.binding.cameraX;
-    }
-    public double getBindingY() {
-        return this.binding.cameraY;
-    }
-    public double getBindingZ() {
-        return this.binding.cameraZ;
-    }
-    public double getBindingRX() {
-        return this.binding.referX;
-    }
-    public double getBindingRY() {
-        return this.binding.referY;
-    }
-    public double getBindingRZ() {
-        return this.binding.referZ;
-    }
-    public boolean isPitchingBound() {
-        return this.binding.bindPitching;
-    }
-    public boolean isYawingBound() {
-        return this.binding.bindYawing;
-    }
-    public boolean isRollingBound() {
-        return this.binding.bindRolling;
-    }
-    public float getBindingPitch() {
-        return this.binding.pitch;
-    }
-    public float getBindingYaw() {
-        return this.binding.yaw;
-    }
-    public float getBindingRoll() {
-        return this.binding.roll;
-    }
-
-    public void setAdjustOffset(boolean value) {
-        this.binding.adjustOffset = value;
-    }
-    public void adjustBindingX(boolean add) {
-        int s = add ? 1 : -1;
-        if (this.isAdjustingOffset()) this.binding.cameraX += s * getAdjustStep();
-        else this.binding.roll += s * 4*(float)getAdjustStep();
-        this.binding.clamp();
-    }
-    public void adjustBindingY(boolean add) {
-        int s = add ? 1 : -1;
-        if (this.isAdjustingOffset()) this.binding.cameraY += s * getAdjustStep();
-        else this.binding.yaw += s * 4*(float)getAdjustStep();
-        this.binding.clamp();
-    }
-    public void adjustBindingZ(boolean add) {
-        int s = add ? 1 : -1;
-        if (this.isAdjustingOffset()) this.binding.cameraZ += s * getAdjustStep();
-        else this.binding.pitch += s * 4*(float)getAdjustStep();
-        this.binding.clamp();
-    }
-
-    // classic
-    public Classic.AdjustMode getClassicAdjustMode() {
-        return this.classic.adjustMode;
-    }
-    public double getClassicX() {
-        return this.classic.cameraX;
-    }
-    public double getClassicY() {
-        return this.classic.cameraY;
-    }
-    public double getClassicZ() {
-        return this.classic.cameraZ;
-    }
-    public double getClassicRX() {
-        return this.classic.referX;
-    }
-    public double getClassicRY() {
-        return this.classic.referY;
-    }
-    public double getClassicRZ() {
-        return this.classic.referZ;
-    }
-    public double getCenterX() {
-        return this.classic.centerX;
-    }
-    public double getCenterY() {
-        return this.classic.centerY;
-    }
-    public double getCenterZ() {
-        return this.classic.centerZ;
-    }
-    public float getClassicPitch() {
-        return this.classic.pitch;
-    }
-    public float getClassicYaw() {
-        return this.classic.yaw;
-    }
-    public float getClassicRoll() {
-        return this.classic.roll;
-    }
-
-    public void cycleClassicAdjustMode() {
-        this.classic.adjustMode = this.classic.adjustMode.cycle();
-    }
-    public void adjustClassicX(boolean add) {
-        int s = add ? 1 : -1;
-        switch (this.classic.adjustMode) {
-            case CENTER:
-                this.classic.centerX += s * getAdjustStep();
-                break;
-            case ROTATION:
-                this.classic.roll += s * 4*(float)getAdjustStep();
-                break;
-            default:
-                this.classic.cameraX += s * getAdjustStep();
-        }
-        this.classic.clamp();
-    }
-    public void adjustClassicY(boolean add) {
-        int s = add ? 1 : -1;
-        switch (this.classic.adjustMode) {
-            case CENTER:
-                this.classic.centerY += s * getAdjustStep();
-                break;
-            case ROTATION:
-                this.classic.yaw += s * 4*(float)getAdjustStep();
-                break;
-            default:
-                this.classic.cameraY += s * getAdjustStep();
-        }
-        this.classic.clamp();
-    }
-    public void adjustClassicZ(boolean add) {
-        int s = add ? 1 : -1;
-        switch (this.classic.adjustMode) {
-            case CENTER:
-                this.classic.centerZ += s * getAdjustStep();
-                break;
-            case ROTATION:
-                this.classic.pitch += s * 4*(float)getAdjustStep();
-                break;
-            default:
-                this.classic.cameraZ += s * getAdjustStep();
-        }
-        this.classic.clamp();
-    }
-
-    // compats
-    public boolean isUsingModModel() {
-        return this.compats.useModModel;
-    }
-    public String getModelModID() {
-        return this.compats.modelModID;
-    }
-    public String getModModelPartName() {
-        return this.compats.modModelPart;
-    }
-    public boolean compatDoABarrelRoll() {
-        return this.compats.doABarrelRoll;
-    }
-    public boolean compatPehkui() {
-        return this.compats.pehkui;
-    }
-    public boolean compatPhysicsMod() {
-        return this.compats.physicsMod;
-    }
-
-    // disable
-    private boolean shouldDisable(ClientPlayerEntity player, String action) {
-        boolean b = false;
-        MinecraftClient client = MinecraftClient.getInstance();
-        for (Triple<String, List<String>, List<String>> triple : this.disable.customConditions) {
-            if (!triple.getRight().contains(action)) continue;
-            String behavior = triple.getLeft();
-            List<String> ids = triple.getMiddle();
-            b = b || (player.isHolding(stack -> ids.contains(Registry.ITEM.getId(stack.getItem()).toString())) &&
-                    (behavior.equals("holding")
-                     || (behavior.equals("attacking") && client.options.attackKey.isPressed())
-                     || (behavior.equals("using") && client.options.useKey.isPressed())));
-        }
-        return b;
-    }
-    public boolean shouldDisableRender(String modelPartName) {
-        if (this.disable.onlyInBinding && this.general.classic) return false;
-        return (this.disable.renderModelPart && this.disable.disabledModelParts.contains(modelPartName))
-            || this.shouldDisable(MinecraftClient.getInstance().player, modelPartName);
-    }
-    public boolean allowRenderingHandWhen(ClientPlayerEntity player) {
-        if (this.disable.onlyInBinding && this.general.classic) return false;
-        return this.shouldDisable(player, "allow_rendering_hand");
-    }
-    public boolean disableModWhen(ClientPlayerEntity player) {
-        if (this.disable.onlyInBinding && this.general.classic) return false;
-        return (player.isFallFlying() && this.disable.fallFlying)
-            || (player.isSwimming() && this.disable.swiming)
-            || (player.shouldLeaveSwimmingPose() && this.disable.crawling)
-            || (player.isSneaking() && this.disable.sneaking)
-            || (player.isSleeping() && this.disable.sleeping)
-            || this.shouldDisable(player, "disable_mod");
-    }
-    public boolean disableRenderingWhen(ClientPlayerEntity player) {
-        if (this.disable.onlyInBinding && this.general.classic) return false;
-        return this.shouldDisable(player, "disable_rendering");
     }
 }
